made mobile header position 'fixed' when user clicks on hamburger, so the drop-down nav does not push content down. Also added padding-top so content does not apper to jump up

--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -41,6 +41,8 @@
 
 	--padding-mobile: 2%;
 	--padding-desktop: 6%;
+
+	--header-height: 88px;
 }
 
 @custom-media --x-small-down (max-width: 359px);
